--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="John Phillips's Portfolio of Work -- this is a class sample site">
+    <meta name="description" content="Chethan R's Portfolio of Work -- this is a class sample site">
     <meta name="author" content="John Phillips">
 
-    <title>John's Portfolio</title>
+    <title>Chethan R</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
