--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
     <meta name="description" content="Chethan R's Portfolio of Work -- this is a class sample site">
-    <meta name="author" content="John Phillips">
+    <meta name="author" content="Chethan R">
 
     <title>Chethan R</title>
 
