--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
     <meta name="description" content="Chethan R's Portfolio of Work -- this is a class sample site">
+    
     <meta name="author" content="Chethan R">
 
     <title>Chethan R</title>
@@ -39,7 +40,7 @@
 <body>
     <div class="jumbotron">
     <div class="container">
-    <h1>John Phillips' Portfolio</h1>
+    <h1> Chethan R's Portfolio</h1>
     <p>Welcome to my portfolio. I am currently a CIS major at Mansfield University of Pennsylania. I like to develop software and have set up this site to keep track of my projects.</p>
     </div>
     </div>
